--- a/scss/_mixins-keyframes.scss
+++ b/scss/_mixins-keyframes.scss
@@ -11,3 +11,38 @@
         transform: scale(1.05);
     }
 }
+
+@keyframes aparicion {
+    0% {
+        transform: scaleY(0.4);
+        transform-origin: 100% 0%;
+    }
+
+    100% {
+        transform: scaleY(1);
+        transform-origin: 100% 0%;
+    }
+}
+
+
+@keyframes demasiadoLejos__imagen {
+    0% {}
+
+    100% {
+        transform: scale(0.01) rotate(360deg);
+    }
+}
+
+@keyframes demasiadoLejos__boton {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1)
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
